--- a/MOBILE/html/new/deposit.html
+++ b/MOBILE/html/new/deposit.html
@@ -34,7 +34,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">마이핫트랙스</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -50,8 +50,8 @@
 
         <div class="my_smenu4">
           <ul>
-            <li><div class="mysmenu_box"><a href="/m/mypage/totsaved" class="btn_totsaved active">통합 <br>포인트</a></div></li>
-            <li><div class="mysmenu_box"><a href="/m/mypage/deposit active" class="btn_deposit">예치금</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/totsaved" class="btn_totsaved ">통합 <br>포인트</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/deposit" class="btn_deposit active">예치금</a></div></li>
             <li><div class="mysmenu_box"><a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a></div></li>
             <li><div class="mysmenu_box"><a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a></div></li>
           </ul>
@@ -85,8 +85,8 @@
                         </div>
                     </li>
                     <li>
-                        <strong class="fl_l only_english">상품후기 적립</strong>
-                        <strong class="fl_r"><span class="only_english color_01">200 P</span></strong>
+                        <strong class="fl_l only_english">환불신청</strong>
+                        <strong class="fl_r"><span class="only_english color_01">-17,300P</span></strong>
                     </li>
                 </ul>
                 <ul class="br_list mb30">
