--- a/MOBILE/html/new/funding_detail3.html
+++ b/MOBILE/html/new/funding_detail3.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="funding_goal_text_wrap mgt30 borderline">
                         <div class="funding_goal_text funding_icon3">
-                            <span>핫트딜 목표금액 미달성 진행시 목표금액
+                            <span>목표금액
                             <span class="only_english base">2,256,700</span>
                             원이 달성되면, 상품 준비와 배송이 진행 됩니다.</span>
                         </div>
