--- a/MOBILE/html/new/funding_orderSheet.html
+++ b/MOBILE/html/new/funding_orderSheet.html
@@ -870,7 +870,7 @@
                                     <div class="alert_iphone">
                                         아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                     </div>
-                                    <div class="choice_wrap type_squre margin_set_top">
+                                    <!-- <div class="choice_wrap type_squre margin_set_top">
                                         <span class="choice_wrap_inner">
                                             <input type="checkbox" name="orderCheck1" id="orderCheck1"  />
                                             <label for="orderCheck1" class="last_check">
@@ -878,7 +878,7 @@
                                                 <div class="color">(전자상거래법 제8조 2항)</div>
                                             </label>
                                         </span>
-                                    </div>
+                                    </div> -->
                                     <div class="funding_policy_wrap">
                                         <dl class="funding_policy">
                                             <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -910,7 +910,7 @@
                                 <div class="alert_iphone">
                                     아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                 </div>
-                                <div class="choice_wrap type_squre margin_set_top">
+                                <!-- <div class="choice_wrap type_squre margin_set_top">
                                     <span class="choice_wrap_inner">
                                         <input type="checkbox" name="orderCheck2" id="orderCheck2"  />
                                         <label for="orderCheck2" class="last_check">
@@ -918,7 +918,7 @@
                                             <div class="color">(전자상거래법 제8조 2항)</div>
                                         </label>
                                     </span>
-                                </div>
+                                </div> -->
                                 <div class="funding_policy_wrap">
                                     <dl class="funding_policy">
                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -961,7 +961,7 @@
                                     <div class="alert_iphone">
                                         아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                     </div>
-                                    <div class="choice_wrap type_squre margin_set_top">
+                                    <!-- <div class="choice_wrap type_squre margin_set_top">
                                         <span class="choice_wrap_inner">
                                             <input type="checkbox" name="orderCheck3" id="orderCheck3"  />
                                             <label for="orderCheck3" class="last_check">
@@ -969,7 +969,7 @@
                                                 <div class="color">(전자상거래법 제8조 2항)</div>
                                             </label>
                                         </span>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="funding_policy_wrap">
                                     <dl class="funding_policy">
@@ -1064,7 +1064,7 @@
                                     <div class="alert_iphone">
                                         아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                     </div>
-                                    <div class="choice_wrap type_squre margin_set_top">
+                                    <!-- <div class="choice_wrap type_squre margin_set_top">
                                         <span class="choice_wrap_inner">
                                             <input type="checkbox" name="orderCheck4" id="orderCheck4"  />
                                             <label for="orderCheck4" class="last_check">
@@ -1072,7 +1072,7 @@
                                                 <div class="color">(전자상거래법 제8조 2항)</div>
                                             </label>
                                         </span>
-                                    </div>
+                                    </div> -->
                                     <div class="funding_policy_wrap">
                                         <dl class="funding_policy">
                                             <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1177,7 +1177,7 @@
                                     <div class="alert_iphone">
                                         아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                     </div>
-                                    <div class="choice_wrap type_squre margin_set_top">
+                                    <!-- <div class="choice_wrap type_squre margin_set_top">
                                         <span class="choice_wrap_inner">
                                             <input type="checkbox" name="orderCheck5" id="orderCheck5"  />
                                             <label for="orderCheck5" class="last_check">
@@ -1185,7 +1185,7 @@
                                                 <div class="color">(전자상거래법 제8조 2항)</div>
                                             </label>
                                         </span>
-                                    </div>
+                                    </div> -->
                                     <div class="funding_policy_wrap">
                                         <dl class="funding_policy">
                                             <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1228,7 +1228,7 @@
                                     <div class="alert_iphone">
                                         아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                     </div>
-                                    <div class="choice_wrap type_squre margin_set_top">
+                                    <!-- <div class="choice_wrap type_squre margin_set_top">
                                         <span class="choice_wrap_inner">
                                             <input type="checkbox" name="orderCheck6" id="orderCheck6"  />
                                             <label for="orderCheck6" class="last_check">
@@ -1236,7 +1236,7 @@
                                                 <div class="color">(전자상거래법 제8조 2항)</div>
                                             </label>
                                         </span>
-                                    </div>
+                                    </div> -->
                                     <div class="funding_policy_wrap">
                                         <dl class="funding_policy">
                                             <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1288,7 +1288,7 @@
                                     <div class="alert_iphone">
                                     아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                     </div>
-                                    <div class="choice_wrap type_squre margin_set_top">
+                                    <!-- <div class="choice_wrap type_squre margin_set_top">
                                         <span class="choice_wrap_inner">
                                             <input type="checkbox" name="orderCheck7" id="orderCheck7"  />
                                             <label for="orderCheck7" class="last_check">
@@ -1296,7 +1296,7 @@
                                                 <div class="color">(전자상거래법 제8조 2항)</div>
                                             </label>
                                         </span>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="funding_policy_wrap">
                                     <dl class="funding_policy">
@@ -1347,7 +1347,7 @@
                                     <div class="alert_iphone">
                                         아이폰 결제 시 세션 오류가 나는 경우, 설정 &gt; safari &gt;쿠키 허용 항목을 “항상”으로 설정해 주세요.
                                     </div>
-                                    <div class="choice_wrap type_squre margin_set_top">
+                                    <!-- <div class="choice_wrap type_squre margin_set_top">
                                         <span class="choice_wrap_inner">
                                             <input type="checkbox" name="orderCheck8" id="orderCheck8" />
                                             <label for="orderCheck8" class="last_check">
@@ -1355,7 +1355,7 @@
                                                 <div class="color">(전자상거래법 제8조 2항)</div>
                                             </label>
                                         </span>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="funding_policy_wrap">
                                     <dl class="funding_policy">
