--- a/MOBILE/html/new/listAlarm.html
+++ b/MOBILE/html/new/listAlarm.html
@@ -33,7 +33,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">알림</h2>
       </div>
       <!--// 서브 --> 
     </div>
