--- a/MOBILE/html/new/listReceipt.html
+++ b/MOBILE/html/new/listReceipt.html
@@ -33,7 +33,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">마이핫트랙스</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -69,13 +69,13 @@
         </div> -->
 
         <div class="box_flex tog_area mt10">
-            <select name="year" onchange="getReceiptList(1);">
+            <select name="year" onchange="getReceiptList(1);" class="bg">
                 <option value="2020" selected="selected">2020년</option>
                 <option value="2019">2019년</option>
                 <option value="2018">2018년</option>
             </select>
 
-            <select name="month" onchange="getReceiptList(1);">
+            <select name="month" onchange="getReceiptList(1);"  class="bg">
                 <option value="01" selected="selected"> 01월</option>
                 <option value="02"> 02월</option>
                 <option value="03"> 03월</option>
@@ -89,7 +89,7 @@
                 <option value="11"> 11월</option>
                 <option value="12"> 12월</option>
             </select>
-            <select name="company" onchange="getReceiptList(1);">
+            <select name="company" onchange="getReceiptList(1);"  class="bg">
                 <option value="A">전체</option>
                 <option value="H">핫트랙스</option>
                 <option value="K">교보문고</option>
@@ -103,7 +103,7 @@
                 <col width="25%">
             </colgroup>
             <tbody>
-                <tr>
+                <!-- <tr>
                     <th>a</th>
                     <th>s</th>
                     <th>d</th>
@@ -114,7 +114,7 @@
                     <td>d</td>
                     <td>f</td>
                     <td>f</td>
-                </tr>
+                </tr> -->
                 <tr>
                     <td colspan="4" class="no-data not t_center">내역이 없습니다.</td>
                 </tr>
