--- a/MOBILE/html/new/memberShip.html
+++ b/MOBILE/html/new/memberShip.html
@@ -55,7 +55,7 @@ jQuery(function($) {
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">멤버쉽혜택</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -67,7 +67,7 @@ jQuery(function($) {
         
 <!-- sub top -->
 <div class="my_info">
-    <strong>하태경</strong>님은 플래티넘 등급입니다.
+    <div class="gradea grade1"></div><strong>하태경</strong>님은 플래티넘 등급입니다.
 </div>
 <div class="sub_contents">
     <ul class="box_slidelist">
@@ -153,7 +153,8 @@ jQuery(function($) {
             <div class="cont">
                 <p><strong>온라인 쿠폰 혜택</strong></p>
                 <p>
-                    <img src="../../images/new/icon_coupon_10x01.png">
+                    <img src="../../images/new/icon_coupon_5000.png">
+                    <img src="../../images/new/icon_coupon_10000.png">
                     <img src="../../images/new/icon_coupon_free1.png">
                 </p>
                 <p> - 회원가입 시 익일 쿠폰 발급</p>
