--- a/MOBILE/html/new/orderDeliveryDetail.html
+++ b/MOBILE/html/new/orderDeliveryDetail.html
@@ -83,7 +83,7 @@
                 <li>
                     <strong class="fl_l">받으실 분<br>주소</strong>
                     <span class="fl_r">
-                        <span class="name only_english bold">[109-19]</span>
+                        <span class="name only_english bold">109-19</span>
                         <span class="name">경기도 파주시 쇠재로 133 </span>
                         <span class="name">510동 1104호 </span>
                     </span>
