--- a/MOBILE/html/new/search.html
+++ b/MOBILE/html/new/search.html
@@ -33,10 +33,11 @@
 		// $('.search_top .input_wrap input').focusout(function(){
 		// 	$('.search_result_list_wrap').removeClass('active');
 		// })
+		// 210129 수정
 		// 검색레이어 높이 
-		var search_result_list_H = $(window).height();
-		$('.search_result_list_wrap').css('height',search_result_list_H - 170);
-		$('html,body').css('overflow','hidden');
+		// var search_result_list_H = $(window).height();
+		// $('.search_result_list_wrap').css('height',search_result_list_H - 170);
+		// $('html,body').css('overflow','hidden');
 	});
 
 </script>
@@ -313,13 +314,13 @@
 	<!--// content -->
 
 	<!-- app bar -->
-	<div id="app_bar">
+	<!-- <div id="app_bar">
 		<a href="../biz/main01.html" class="btn_home">HOTTRACKS</a>
 		<a href="#none" class="btn_today">오늘,혜택</a>
 		<a href="#none" class="btn_cart">장바구니<em class="font_t">99+</em></a>
-		<!-- 최근 본상품 있을경우 on : class 추가 -->
+		
 		<a href="#none" class="btn_history">히스토리</a>
-	</div>
+	</div> -->
 	<!--// app bar -->
 
 	<script type="text/javascript">
