--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1232,7 +1232,7 @@ th.row-headers-background {
         <td class="s9"></td>
         <td class="s16"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/mypage_main.html">./html/new/mypage_main.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/mypage_main.html">http://devm.hottracks.co.kr/html/new/mypage_main.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1243,7 +1243,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/memberShip.html">http://devm.hottracks.co.kr/html/new/memberShip.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr><!-- 
@@ -1254,7 +1254,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/totsaved_blank.html">./html/new/totsaved_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/totsaved_blank.html">http://devm.hottracks.co.kr/html/new/totsaved_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1265,7 +1265,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/totsaved.html">./html/new/totsaved.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/totsaved.html">http://devm.hottracks.co.kr/html/new/totsaved.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1276,7 +1276,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit.html">./html/new/deposit.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/deposit.html">http://devm.hottracks.co.kr/html/new/deposit.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr><!-- 
@@ -1287,7 +1287,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit_blank.html">./html/new/deposit_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/deposit_blank.html">http://devm.hottracks.co.kr/html/new/deposit_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1298,7 +1298,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit2.html">./html/new/deposit2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/deposit2.html">http://devm.hottracks.co.kr/html/new/deposit2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr><!-- 
@@ -1309,7 +1309,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit2_blank.html">./html/new/deposit2_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/deposit2_blank.html">http://devm.hottracks.co.kr/html/new/deposit2_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> --><!-- 
@@ -1320,7 +1320,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit.html">./html/new/deposit.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/deposit.html">http://devm.hottracks.co.kr/html/new/deposit.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1331,7 +1331,7 @@ th.row-headers-background {
         <td class="s16">내역있음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit.html">./html/new/deposit.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/deposit.html">http://devm.hottracks.co.kr/html/new/deposit.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1342,7 +1342,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon.html">./html/new/coupon.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/coupon.html">http://devm.hottracks.co.kr/html/new/coupon.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr><!-- 
@@ -1353,7 +1353,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon_blank.html">./html/new/coupon_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/coupon_blank.html">http://devm.hottracks.co.kr/html/new/coupon_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1364,7 +1364,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon2.html">./html/new/coupon2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/coupon2.html">http://devm.hottracks.co.kr/html/new/coupon2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr><!-- 
@@ -1375,7 +1375,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon2_blank.html">./html/new/coupon2_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/coupon2_blank.html">http://devm.hottracks.co.kr/html/new/coupon2_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1386,7 +1386,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listReceipt.html">./html/new/listReceipt.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listReceipt.html">http://devm.hottracks.co.kr/html/new/listReceipt.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1397,7 +1397,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/savePointByOffBill.html">./html/new/savePointByOffBill.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/savePointByOffBill.html">http://devm.hottracks.co.kr/html/new/savePointByOffBill.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1408,7 +1408,7 @@ th.row-headers-background {
         <td class="s16">내역있음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/savePointByOffBill.html">./html/new/savePointByOffBill.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/savePointByOffBill.html">http://devm.hottracks.co.kr/html/new/savePointByOffBill.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1419,7 +1419,7 @@ th.row-headers-background {
         <td class="s16">내역없음</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/savePointByOffBill_blank.html">./html/new/savePointByOffBill_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/savePointByOffBill_blank.html">http://devm.hottracks.co.kr/html/new/savePointByOffBill_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1430,7 +1430,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDelivery.html">./html/new/orderDelivery.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderDelivery.html">http://devm.hottracks.co.kr/html/new/orderDelivery.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1441,7 +1441,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDeliveryDetail.html">./html/new/orderDeliveryDetail.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderDeliveryDetail.html">http://devm.hottracks.co.kr/html/new/orderDeliveryDetail.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1452,7 +1452,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDeliveryDetail3.html">./html/new/orderDeliveryDetail3.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderDeliveryDetail3.html">http://devm.hottracks.co.kr/html/new/orderDeliveryDetail3.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1463,7 +1463,7 @@ th.row-headers-background {
         <td class="s16">배송조회 팝업</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popup_blank.html">./html/new/popup_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_blank.html">http://devm.hottracks.co.kr/html/new/popup_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
@@ -1474,7 +1474,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_product.html">./html/new/list_wish_product.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/list_wish_product.html">http://devm.hottracks.co.kr/html/new/list_wish_product.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1485,18 +1485,18 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_brand.html">./html/new/list_wish_brand.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/list_wish_brand.html">http://devm.hottracks.co.kr/html/new/list_wish_brand.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s16">좋아요좋아요</td>
+        <td class="s16">이럴때 좋아요</td>
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_like.html">./html/new/list_wish_like.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/list_wish_like.html">http://devm.hottracks.co.kr/html/new/list_wish_like.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1507,7 +1507,7 @@ th.row-headers-background {
         <td class="s16">상품평쓰기</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/reviewForm.html">./html/new/reviewForm.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/reviewForm.html">http://devm.hottracks.co.kr/html/new/reviewForm.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1518,7 +1518,7 @@ th.row-headers-background {
         <td class="s16">상품평보기-리스트</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listMyReview.html">./html/new/listMyReview.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listMyReview.html">http://devm.hottracks.co.kr/html/new/listMyReview.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>.html
       </tr> -->
@@ -1529,7 +1529,7 @@ th.row-headers-background {
         <td class="s16">상품평보기- 상세</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listTargetReview.html">./html/new/listTargetReview.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listTargetReview.html">http://devm.hottracks.co.kr/html/new/listTargetReview.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1540,7 +1540,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listAlarm.html">./html/new/listAlarm.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listAlarm.html">http://devm.hottracks.co.kr/html/new/listAlarm.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1551,7 +1551,7 @@ th.row-headers-background {
         <td class="s16">리스트</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/questionList.html">./html/new/questionList.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/questionList.html">http://devm.hottracks.co.kr/html/new/questionList.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1562,7 +1562,7 @@ th.row-headers-background {
         <td class="s16">리스트</td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listMyEvent.html">./html/new/listMyEvent.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listMyEvent.html">http://devm.hottracks.co.kr/html/new/listMyEvent.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
