--- a/PC/html/new/listWish_blank.html
+++ b/PC/html/new/listWish_blank.html
@@ -286,7 +286,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">좋아요♥  내역보기</h3>
+                    <h3 class="page_title mgt0 border">좋아요♥  내역보기</h3>
                     <ul class="list_type02_v2 mgt20 mgb60">
                         <li>고객님이 좋아요한 상품/브랜드/이럴 때 좋아요는 보관 기간 제한이 없이 영구보존 됩니다.</li>
                         <li>관심있는 상품/브랜드/이럴 때 좋아요 를 누르고 관리하세요. 쿠폰, 혜택을 한 번에 확인하실 수 있습니다.</li>
@@ -302,8 +302,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                     <div class="at_this_time_like_wrap">
                         <div class="blank_text_wrap">
-                            <p>좋아요한 브랜드가 없습니다.</p> 
-                               <p class="tt">일치되는 검색결과를 찾을 수 없습니다.</p> 
+                            <p class="tt inlineblock">좋아요한 브랜드가 없습니다.</p>  
                         </div>
                     </div>                  
                 </div>
