--- a/PC/html/new/myEventList.html
+++ b/PC/html/new/myEventList.html
@@ -212,11 +212,13 @@
                 <!-- sub contents -->
                 <div class="sub_contents">
                     <!-- search -->
-                    <h3 class="page_title mgt0">이벤트 참여 내역</h3>
+                    <h3 class="page_title mgt0 border">이벤트 참여 내역</h3>
 				    <ul class="list_type02_v2 mgt20 mgb60">
 				        <li>참여하신 이벤트에 대하여 편리하게 보실 수 있습니다.</li>
+                        <li>당첨되신분은 반드시 당첨자 확인대기를 클릭하여 정보를 입력해야만 혜택을 받으실 수 있습니다.</li>
 				    </ul>
-				    <div class="fs14 mgl5">현재 <strong>1</strong>건의 이벤트에 참여 중입니다.</div>
+                    <h4 class="page_title mgt80">현재 <strong>1</strong>건의 이벤트에 참여 중입니다.</h4>
+				    <!-- <div class="fs14 mgl5"></div> -->
 				    <table class="bbs_list_v2 mgt20">
 				        <caption>이벤트 참여 내역 <span>참여일자, 이벤트명, 당첨자 발표, 진행여부</span></caption>
 				        <colgroup>
@@ -235,7 +237,7 @@
 				        </thead>
 				        <tbody>
 			                <tr>
-			                    <td>2019.04.05</td>
+			                    <td class="only_english">2019.04.05</td>
 			                    <td class="t_left"><a href="#n" title="새창에서 열림"><꿈꾸는 4월>  출석체크</a></td>
 			                    <td>
 			                        <!-- next-chance -->
@@ -246,7 +248,7 @@
 				        </tbody>
 				    </table>
 				    <!-- paging -->
-				    <div class="paging cs">
+				    <div class="paging cs mgt80">
 				    	<a title="맨 처음 페이지로 이동" href="#n" class="first">처음</a>
 				        <ul>			            
 				            <li class="active"><a href="#n">1</a></li>
