--- a/PC/html/new/mypageMain_this.html
+++ b/PC/html/new/mypageMain_this.html
@@ -633,7 +633,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
 
                                 <div class="my_list_section mgt80">
-                                    <h3 class="tit01 fz mgt30">내 상품평</h3>
+                                    <h3 class="page_title fz22 mgt30">내 상품평</h3>
                                     <table class="bbs_list_v2 space_pad border mgt20">
                                         <caption>내 상품평 <span>작성일자, 상품, 내용, 만족도</span></caption>
                                         <colgroup>
@@ -668,7 +668,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
 
                                 <div class="my_list_section mgt80">
-                                    <h3 class="tit01 fz mgt30">상품 Q&amp;A</h3>
+                                    <h3 class="page_title fz22 mgt30">상품 Q&amp;A</h3>
                                     <table class="bbs_list_v2 space_pad border mgt20">
                                         <caption>상품 Q&amp;A<span>작성일자, 상품, 내용, 만족도</span></caption>
                                         <colgroup>
@@ -703,7 +703,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
 
                                 <div class="my_list_section mgt80">
-                                    <h3 class="tit01 fz mgt30">SOS 상담</h3>
+                                    <h3 class="page_title fz22 mgt30">SOS 상담</h3>
                                     <table class="bbs_list_v2 space_pad border mgt20">
                                         <caption>SOS 상담<span>작성일자, 상품구분, 내용, 답변여부</span></caption>
                                         <colgroup>
