--- a/PC/html/new/orderChange.html
+++ b/PC/html/new/orderChange.html
@@ -368,7 +368,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                          <li>주문취소 및 배송지 변경이 가능한 주문내역만 보여집니다.</li>
                         <li>상품준비 이전 단계에서는 주문 전체취소 및 주소변경이 가능하며, [주문/배송조회]에서 확인하실 수 있습니다.</li>
-                        <li>상품준비 이전 단계에서의 부분취소는 [SOS 상담]을 이용하시거나 고객센터로 연락주시기 바랍니다.</li>
+                        <li>상품준비 이전 단계에서의 부분취소는    <a href="#none"> [SOS 상담]</a>을 이용하시거나 고객센터로 연락주시기 바랍니다.</li>
                         <li>주문취소 시에는 고객님께서 결제한 계좌로 환불처리 됩니다.(신용카드 : 즉시, 계좌이체 : 최대3일 소요)</li> 
                         <li>일부 환불이 불가능한 경우에는 교보핫트랙스 온라인 예치금으로 자동 예치됩니다.[교보핫트랙스 온라인 예치금] 메뉴에서
                         환불 요청 가능 
@@ -388,7 +388,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                             </div>
                         </li> 
-                        <li>상품준비 이후 단계에서는 [SOS 상담] 또는 고객센터를 통해 신청이 가능하나, 상품이 이미 출고된 경우에는 취소 및 변경이 불가능합니다. 출고 이후 주문취소는 반품접수를 이용해주시기 바랍니다.</li>
+                        <li>상품준비 이후 단계에서는 <a href="#none">[SOS 상담]</a> 또는 고객센터를 통해 신청이 가능하나, 상품이 이미 출고된 경우에는 취소 및 변경이 불가능합니다. 출고 이후 주문취소는 반품접수를 이용해주시기 바랍니다.</li>
                     </ul>
 
                     <table class="bbs_list_v2 border space_pad mgt80">
