--- a/PC/html/new/orderDelivery.html
+++ b/PC/html/new/orderDelivery.html
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <li ><a href="#n" _onclick="orderSearch(2)">취소 주문 조회</a></li>
                         </ul>
                     </div> -->
-                    <table class="bbs_list_v2 space_pad">
+                    <table class="bbs_list_v2 space_pad pd35">
                         <caption>조회기간별 주문내역 <span>주문일, 주문번호, 주문상품, 주문금액, 주문상태</span>
                         </caption>
                         <colgroup>
@@ -417,7 +417,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <!-- <div class="btn_display">
                                             <span _onclick="return false;" class="btn_type05_v2 bg" style="width:150px;">상품평 포인트 적립완료</span>
                                         </div> -->
-                                        <div class="btn_display mgt10">
+                                        <div class="btn_display mgt15">
                                             <a href="javascript:;" _onclick="return false;" class="btn_type05_v2 bg">상품평 작성</a>
                                         </div>
                                     </div>
@@ -440,7 +440,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <!-- <div class="btn_display">
                                             <span _onclick="return false;" class="btn_type05_v2 bg" style="width:150px;">상품평 포인트 적립완료</span>
                                         </div> -->
-                                        <div class="btn_display mgt10">
+                                        <div class="btn_display mgt15">
                                             <a href="javascript:;" _onclick="return false;" class="btn_type05_v2 bg">상품평 완료</a>
                                         </div>
                                     </div>
@@ -457,14 +457,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </tbody>
                     </table>
                     <!-- paging -->
-                    <div class="paging cs">
+                    <div class="paging cs mgt80">
                         <a title="맨 처음 페이지로 이동" href="#n" class="first">처음</a>
                         <ul>
                             <li class="active"><a href="#n">1</a></li>
                         </ul>
                     </div>
                     <!-- //paging -->
-                    <h3 class="page_title mgt60">주문처리 안내</h3>
+                    <h4 class="tit01 mgt100">주문처리 안내</h3>
                     <!-- <ol class="step_list order_step">
                         <li><strong>결제완료</strong> 결제내역 확인</li>
                         <li><strong>상품준비</strong> 상품 출고지시</li>
