--- a/PC/html/new/orderDeliveryDetail.html
+++ b/PC/html/new/orderDeliveryDetail.html
@@ -337,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">주문/배송 상세내역</h3>
+                    <h3 class="page_title mgt0">주문배송조회</h3>
                     <div class="box_gray02 delivery_detail mgt20">주문번호<span class="mgl10 order_num only_english">191216000001</span></div>
 
                     <!-- <h3 class="tit01 mgt30">주문/배송 정보</h3> -->
@@ -413,7 +413,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <tr>
                                 <th scope="row">결제 상세</th>
                                 <td colspan="3">
-                                    <ul class="p_lineh payment_list">
+                                    <ul class="p_lineh payment_list pt10 pb10">
                                         <li>상품금액 : 310,400원</li>
                                         <li>배송비 : 5,200원</li>
                                         <li>할인금액 : 
@@ -429,7 +429,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <li class="mgt15">
                                                 결제금액 : 0원                                            
                                             <br>
-                                            <a class="btn_type05_v2 mgt10" href="javascript:specificationOnTransaction('191216000001');">거래명세서 출력</a>                                                
+                                            <a class="btn_type05_v2 bg mgt10" href="javascript:;">거래명세서 출력</a>
+                                            <a class="btn_type05_v2 bg mgt10 mgl10" href="javascript:;">신용카드전표출력</a>                                                
                                         </li>
                                     </ul>
                                 </td>
@@ -442,7 +443,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </table>
 
                     <h4 class="page_title mgt60">환불 정보</h4>
-                    <table class="table02_v1">
+                    <table class="table02_v1 padsmall">
                         <caption>환불 정보 <span>총 취소금액, 총 환불금액, 환불 상세</span></caption>
                         <colgroup>
                             <!-- <col style="width:110px"> -->
@@ -472,7 +473,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
                     <!-- <h2 class="tit01 mgt60">주문자 정보</h2> -->
                     <h4 class="page_title mgt60">주문자 정보</h4>
-                    <table class="table02_v1">
+                    <table class="table02_v1 padsmall">
                         <caption>주문자 정보 <span>이름, 이메일, 전화번호, 휴대폰</span></caption>
                         <colgroup>
                             <col style="width:140px">
@@ -498,7 +499,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                     <!-- <h2 class="tit01 mgt60">배송지 정보</h2> -->
                     <h4 class="page_title mgt60">배송지 정보</h4>
-                    <table class="table02_v1">
+                    <table class="table02_v1 padsmall">
                         <caption>배송지 정보 <span>이름, 전화번호, 휴대폰, 주소, 전달메시지, 주문요청사항, 배송요청사항</span></caption>
                         <colgroup>
                             <col style="width:140px">
