--- a/PC/html/new/popupCardinfo.html
+++ b/PC/html/new/popupCardinfo.html
@@ -242,7 +242,7 @@ $(document).ready(function() {
                                     </div>
 
                                     <div class="mgt20 choice_layer_wrap">
-                                        <div class="" id="trAmt1">
+                                        <div class="" id="trAmt1" style="width:500px; margin: 0 auto;">
                                             <dl class="cardinfo_choice_list">
                                                 <dt class="cardinfo_title">구매자명</dt>
                                                 <dd class="cardinfo_desc">
@@ -252,7 +252,7 @@ $(document).ready(function() {
                                                 </dd>
                                             </dl>                                        
                                         </div>
-                                        <div class=""  id="trAmt2">                                            
+                                        <div class=""  id="trAmt2" style="width:500px; margin: 0 auto;">                                            
                                             <dl class="cardinfo_choice_list mgt15">
                                                 <dt class="cardinfo_title">결제금액</dt>
                                                 <dd class="cardinfo_desc">
@@ -263,7 +263,7 @@ $(document).ready(function() {
                                                 </dd>
                                             </dl>    
                                         </div>
-                                        <div class="" id="trEmail" style="display:none">                                           
+                                        <div class="" id="trEmail" style="display:none"  style="width:500px; margin: 0 auto;">                                           
                                             <dl class="cardinfo_choice_list">
                                                 <dt class="cardinfo_title">이메일</dt>
                                                 <dd class="cardinfo_desc">
@@ -273,7 +273,7 @@ $(document).ready(function() {
                                                 </dd>
                                             </dl>
                                         </div>
-                                        <div class="" id="trCardno" style="display:none">                                         
+                                        <div class="" id="trCardno" style="display:none" style="width:500px; margin: 0 auto;">                                         
                                             <dl class="cardinfo_choice_list">
                                                 <dt class="cardinfo_title">카드번호</dt>
                                                 <dd class="cardinfo_desc">
