--- a/PC/html/new/popupChangeDeliveryDestination.html
+++ b/PC/html/new/popupChangeDeliveryDestination.html
@@ -102,7 +102,7 @@
                                                <input type="text" placeholder="" class="width100" readonly="readonly" value="상세주소 " readonly="readonly">
                                             </div>
                                             <!-- <a href="javascript:;" class="btn_defalut addr">우편번호검색</a> -->
-                                            <button onclick="javascript:;" class="btn_defalut black">우편번호검색</button>
+                                            <button onclick="javascript:;" class="btn_defalut">우편번호검색</button>
                                         </div>
                                         <!-- <input type="text" name="receiverPostNum1" style="width:31px;" class="input_txt" value="108" readonly="readonly"/>
                                         -
