--- a/PC/html/new/popupDeposit.html
+++ b/PC/html/new/popupDeposit.html
@@ -30,7 +30,7 @@
                     <div class="pop_cont">
                         <ul class="list_type02_v2">
                             <li>환불계좌 예금주는 회원 본인만 가능합니다.</li>
-                            <li>환불 요청 예치금은 신청한 다음날 해당 계좌로 입금됩니다.</li>
+                            <li>환불요청 예치금은 신청한 다음날 해당 계좌로 입금됩니다. (주말,공휴일 신청 시 다음 영업일)</li>
                         </ul>
                         <form id="form" name="form"> 
                             <table class="table02_v1 mgt15">
