--- a/PC/html/new/returnExchangeProduct.html
+++ b/PC/html/new/returnExchangeProduct.html
@@ -35,7 +35,7 @@
         <div class="tooltip_inner">
             <p class="tooltip_tit">반품/교환 상품 조회</p>
             <div class="pop_cont reset">
-                <ul class="list_type02_v2 mgb20">
+                <ul class="list_type02_v2 none mgb20">
                     <li>반품/교환 신청은 발송 완료일로부터 7일 이내에 가능합니다.</li>
                     <li>반품/교환을 원하시는 상품 및 수량을 선택하세요.</li>
                 </ul>
@@ -65,7 +65,7 @@
                                         <label for="check"></label>
                                     </div>
                                 </td>  
-                                <td>로이텀 미디엄 노트 뮤트 데님</td>
+                                <td>주문번호 : 1010122000001(모르로트/인터넷)</td>
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
                             </tr>
