--- a/PC/html/new/returnExchange_detail.html
+++ b/PC/html/new/returnExchange_detail.html
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </table>
 
                         <!-- <h4 class="tit01">신청사유</h4> -->
-                        <h4 class="page_title mgt80">상품선택</h4>
+                        <h4 class="page_title mgt80">신청사유</h4>
                         <div class="tbl_top mgt10">빠른 확인처리를 위해 상세한 반품/교환 사유를 써주세요.</div>
                         <div class="mgt30">                            
                             <div class="select_wrap ">
