--- a/PC/html/new/saved2.html
+++ b/PC/html/new/saved2.html
@@ -337,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">마일리지</h3>
+                    <h3 class="page_title border  mgt0">마일리지</h3>
                     <ul class="list_type02_v2 mgt20 mgb0">
                         <li>마일리지는 상품 구매, 상품평 등록 등을 통해 적립됩니다.</li>
                     </ul>
