--- a/PC/html/new/search_Vss.html
+++ b/PC/html/new/search_Vss.html
@@ -161,60 +161,242 @@
 					<!-- 201221 키워드 S -->
 					<!-- 210118 슬라이드 수정 : S -->
 					<div class="form_search_list_wrap">
-						<ul class="form_search_list">
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼	대한민국 & 독일 수교 20주년 한정판</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 대한민국 & 독일 수교 20주년 한정판 리뉴얼	대한민국 & 독일 수교 20주년 한정판</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<div class="form_search_list_page">
-								<a href="" class="arr prev first"></a>
-								<a href="" class="active">1</a>
-								<a href="" class="">5</a>
-								<a href="" class="arr next"></a>
-							</div>
-						</ul>
-
+						<div class="bxslider">			
+							<div class="form_searh_list_slide">		
+								<!-- list 반복 -->
+								<ul class="form_search_list">
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+								</ul>
+								<ul class="form_search_list">
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+								</ul>
+								<ul class="form_search_list">
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+								</ul>
+							</div>	
+						</div>
 					</div>
 					<!-- // 210118 슬라이드 수정 : E -->
 
