--- a/PC/html/new/txinRequest.html
+++ b/PC/html/new/txinRequest.html
@@ -634,7 +634,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <a href="#n" id="" class="btn_type04_v2 mgl20">취소</a>
                         </div>
                     </form>
-                    <div class="box_gray_02 distance">
+                    <div class="box_gray_02 distance" style="padding-top:20px;">
                         <div class="txin_title_wrap">
                             <h4 class="page_title">세금계산서 신청 시 유의사항</h4>
                             <a href="#n" _onclick="goFaq()" class="btn_type01_v2 mgl10">세금계산서 FAQ</a>
