--- a/PC/html/new/txinRequestList.html
+++ b/PC/html/new/txinRequestList.html
@@ -337,14 +337,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">세금계산서 신청내역</h3>
-				    <ul class="list_type02_v2 mgt20 mgb0">
+                    <h3 class="page_title border mgt0">세금계산서 신청내역</h3>
+				    <!-- <ul class="list_type02_v2 mgt20 mgb0">
 				        <li>세금계산서 신청 내역 및 발급현황을 확인하실 수 있습니다.</li>
-				    </ul>
-                    <div class="t_ar mgt10">
-				        <a href="#n" class="btn_type05_v3">세금계산서 신청</a>
+				    </ul> -->
+
+                    <div class="positionR">
+                        <div class="tbl_top mgt80">반품/교환 신청은 발송완료일로부터 7일 이내에 가능합니다.</div>
+                    
+				        <a href="#n" class="btn_type05_v3 location_btn">세금계산서 신청</a>
                     </div>
-				    <table class="bbs_list_v2 mgt20">
+				    <table class="bbs_list_v2 mgt40">
 				        <caption>세금계산서 신청내역 <span>순번, 신청자명, 신청일, 발급일, 처리 상태</span>
 				        </caption>
 				        <colgroup>
@@ -379,7 +382,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				        </tbody>
 				    </table>
                     <!-- paging -->
-                    <div class="paging cs mgt40">
+                    <div class="paging cs mgt80">
                         <a title="맨 처음 페이지로 이동" href="/ht/help/faqListC0391?page=1" class="first">처음</a>
                         <ul>
                             <li class="active">
