--- a/MOBILE/html/new/coupon.html
+++ b/MOBILE/html/new/coupon.html
@@ -37,7 +37,7 @@
                         <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a>
                         <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a>
                         <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-                        <h2 id="subTitle">마이페이지</h2>
+                        <h2 id="subTitle">마이핫트랙스</h2>
                     </div>
                     <!--// 서브 -->
                 </div>
@@ -93,7 +93,7 @@
                                 </span>
                                 <a href="javascript:;" class="btn_defalut squre width_80 mlmn">등록</a>
                             </div>
-                            <div class="info mt20">고고객님의 보유 쿠폰은
+                            <div class="info mt20">고객님의 보유 쿠폰은
                                 <span class="color_01">
                                     <strong class="only_english base">88,264,100</strong>
                                 </span>
