--- a/MOBILE/html/new/deposit2.html
+++ b/MOBILE/html/new/deposit2.html
@@ -33,7 +33,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">마이핫트랙스</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -79,8 +79,8 @@
                         </div>
                     </li>
                     <li>
-                        <strong class="fl_l only_english">상품후기 적립</strong>
-                        <strong class="fl_r"><span class="only_english color_01">200 P</span></strong>
+                        <strong class="fl_l only_english">환불신청</strong>
+                        <strong class="fl_r"><span class="only_english color_01">-17,300P</span></strong>
                     </li>
                     <li class="line bg_eeeeee"><strong>고객님의 환불신청내역은 존재하지 않습니다.</strong></li>
                 </ul>
