--- a/MOBILE/html/new/funding_detail2.html
+++ b/MOBILE/html/new/funding_detail2.html
@@ -181,7 +181,8 @@
                     </div>
                     <div class="funding_goal_text_wrap mgt30 borderline">
                         <div class="funding_goal_text funding_icon2">
-                            <span>핫트딜이 성공적으로 종료되었습니다.</span>    
+                            <span>핫트딜이 성공적으로 종료되었습니다.</span>
+                            <span class="block">곧, 상품 준비와 배송이 진행 됩니다.</span>        
                         </div>
                     </div>
                     <div class="stuff_price_box distance">
