--- a/MOBILE/html/new/listMyEvent.html
+++ b/MOBILE/html/new/listMyEvent.html
@@ -60,7 +60,7 @@
                 <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a>
                 <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a>
                 <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-                <h2 id="subTitle">마이페이지</h2>
+                <h2 id="subTitle">나의 이벤트</h2>
             </div>
             <!--// 서브 --> 
         </div>
@@ -70,14 +70,14 @@
     <!-- #content -->
     <div id="content">
         <!-- sub contents -->
-        <div id="my_content">
+        <div id="my_content" class="aa">
             <div class="tit_orange">
                 <h3 class="tit">HOTTRACKS EVENT</h3>
             </div>
             <div class="space_pad myevet_wrap">
                 <ul class="br_list mb30">    
                     <li class="bg_eeeeee">
-                        2019.04.05(참여일자)
+                        <em class="bold">2019.04.05</em> (참여일자)
                     </li>
                     <li class="">
                         <strong class="fl_l2">
@@ -85,11 +85,26 @@
                         </strong>
                         <span class="fl_r">발표완료</span>
                     </li>
-                    <li id="li_0" style="display: none;" class="t_c">
+                    <li id="li_0" style="display: none;" class="t_r bg_eeeeee">
                         <span style="width:100%;">
-                            <a href="#" class="li_a" onclick="goEvent('59855');return false;">해당 이벤트 보기</a>
+                            <a href="#" class="li_a icon_arrow" onclick="goEvent('59855');return false;">해당 이벤트 보기</a>
                         </span>
-                        <span class="fl_l4">
+                        <span class="fl_l4" style="font-size: 13px; color:#000; text-align: left;">
+                            <span class="color_01">안녕하세요. 핫트랙스 담당자입니다.</span>
+                            <span style="margin-top:30px; display: block; border-bottom: 1px #DBDBDB solid; padding-bottom: 30px;">우선 고객님들의 많은 참여 머리숙여 감사인사드립니다!!
+
+앞으로도 많은 이벤트와 함께 고객님께 다가가는 핫트랙스가
+
+되겠습니다.
+
+
+영화<파힘>예매권 이벤트 담청자를 아래와 같이 안내 드립니다. </span>
+<span style="padding: 30px 0;">Kanyou3**
+Asdfjkef**
+Wqio12fmkd*
+Asdfsadf**
+Odfieiu124*
+Ddfas**</span>
                         </span>
                     </li>
                 </ul>
