--- a/MOBILE/html/new/listTargetReview.html
+++ b/MOBILE/html/new/listTargetReview.html
@@ -33,7 +33,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">상품평</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -93,7 +93,10 @@
             
             </ul>
         </div> -->
-        <p class="info mt30">매월 우수 상품평 작성자 10분께 통합포인트 5,000점이 적립됩니다. 상품평에 적합하지 않은 내용, 미풍양속을 해치는 내용 등은 통보없이 삭제될 수 있으며 통합포인트가 지급되지 않습니다. 상품문의 교환 반품 요청 제품이상 등 불편사항은 1:1 문의 하기를 이용해 주세요.</p>
+        <p class="info mt30">상품평에 적합하지 않은 내용,미풍양속을 해치는 내용 등은 통보
+없이 삭제될 수 있으며 통합포인트가 지급되지 않습니다.
+상품문의 교환 반품 요청 제품이상 등 불편사항은 SOS상담을
+이용해 주세요</p>
     </div>
 
 </div>
