--- a/MOBILE/html/new/list_wish_product.html
+++ b/MOBILE/html/new/list_wish_product.html
@@ -54,7 +54,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">좋아요</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -82,6 +82,7 @@
             <a href="#none" class="sort_link">디자인/문구<span class="num font_t">(14)</span></a>
             <a href="#none" class="sort_link">고급필기구<span class="num font_t">(14)</span></a>
             <a href="#none" class="sort_link">뷰티/헬스<span class="num font_t">(14)</span></a>
+            <a href="#none" class="sort_link">여행/자동차<span class="num font_t">(14)</span></a>
         </div>
 
         <div class="at_this_time_like_wrap">
