--- a/MOBILE/html/new/orderDelivery.html
+++ b/MOBILE/html/new/orderDelivery.html
@@ -34,7 +34,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">마이페이지</h2>
+        <h2 id="subTitle">주문배송조회</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -79,24 +79,18 @@
         </div> -->
         <div class="box_flex tog_area mt10">
             <select name="year" onchange="getRece        iptList(1);">
-                <option value="2020" selected="selected">2020년</option>
-                <option value="2019">2019년</option>
-                <option value="2018">2018년</option>
+                <option value="2020" selected="selected">최근 6개월</option>
+                <option value="2019">6개월 이전</option>
             </select>
 
             <select name="month" onchange="getReceiptList(1);">
-                <option value="01" selected="selected"> 01월</option>
-                <option value="02"> 02월</option>
-                <option value="03"> 03월</option>
-                <option value="04"> 04월</option>
-                <option value="05"> 05월</option>
-                <option value="06"> 06월</option>
-                <option value="07"> 07월</option>
-                <option value="08"> 08월</option>
-                <option value="09"> 09월</option>
-                <option value="10"> 10월</option>
-                <option value="11"> 11월</option>
-                <option value="12"> 12월</option>
+                <option value="01" selected="selected"> 주문상태전체</option>
+                <option value="02"> 결제대기</option>
+                <option value="04"> 결제완료</option>
+                <option value="05"> 상품준비</option>
+                <option value="06"> 배송중</option>
+                <option value="07"> 배송완료</option>
+                <option value="07"> 취소/반품/교환</option>
             </select>
         </div>
     </div>
@@ -145,7 +139,7 @@
         </ul>            
         <div class="btn_box dlvy_list_next_wrap mt20">
             <a href="#n" class="btn_tacbae btn_mbrg">배송조회</a>
-            <a href="#" onclick="return false;" class="bt_mbgb">수취확인</a>
+            <a href="#" onclick="return false;" class="bt_mbgb">상품평작성</a>
         </div>
     </div>
 
@@ -168,7 +162,7 @@
                             <span class="txt bold">로이텀 스페셜 에디션 미디엄 RED DOT</span>
                             <span class="spec mt20">ARMY</span>
                             <span class="price mt5"><em class="only_english base">25,200</em><em>원 (1개)</em></span>
-                            <span class="stat">배송중</span>
+                            <span class="stat">배송완료 </span>
                         </dd>
                     </dl>
                 </a>
@@ -179,8 +173,8 @@
                 </li> -->
         </ul>            
         <div class="btn_box dlvy_list_next_wrap mt20">
-            <a href="#n" class="btn_tacbae btn_mbrg">배송조회</a>
-            <a href="#" onclick="return false;" class="bt_mbgb">수취확인</a>
+            <a href="#n" class="btn_tacbae btn_mbrg">배송완료</a>
+            <a href="#" onclick="return false;" class="bt_mbgb">상품평 작성</a>
         </div>
     </div>
 </div>
