--- a/PC/html/new/deposit2.html
+++ b/PC/html/new/deposit2.html
@@ -337,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">교보핫트랙스 온라인 예치금</h3>
+                    <h3 class="page_title border mgt0">교보핫트랙스 온라인 예치금</h3>
 				    <ul class="list_type02_v2 mgt20 mgb0">
                         <li>교보핫트랙스 온라인 예치금은 결제대금 환불, 배송비 정산 등으로 발생한 금액입니다.</li>
                         <li>예치된 금액은 주문 결제 시 사용이 가능하며, 은행계좌로 환불신청을 하실 수 있습니다.</li>
