--- a/PC/html/new/listSosCounsel_blank.html
+++ b/PC/html/new/listSosCounsel_blank.html
@@ -337,13 +337,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- sub contents -->
                 <div class="sub_contents">
 
-                    <h3 class="page_title mgt0">SOS 상담</h3> 
+                    <h3 class="page_title border mgt0">SOS 상담</h3> 
 				    <ul class="list_type02_v2 mgt20 mgb40">
 				        <li>회원님이 접수하신 상담 및 처리내역을 확인하실 수 있습니다.</li>
 				        <li>고객센터 운영시간은 오전 9시~오후 6시(토/일/공휴일 제외)입니다.</li>
-				        <li>매장 이용 상담의 문의는 등록하신 <strong class="c_red">이메일 또는 전화번호로 회신</strong>을 드립니다.</li>
+				        <li>매장 이용 상담의 문의는 등록하신 <!-- <strong class="c_red"> -->이메일 또는 전화번호로 회신<!-- </strong> -->을 드립니다.</li>
 				    </ul>
-				    <a href="#n" class="btn_type01_v2 f_left mgb20">SOS 상담접수</a>
+                    <div class="positionR">
+                        <h4 class="page_title mgt80">SOS 접수내역</h4>
+                        <a href="#n" _onclick="goTxinRequestList()" class="btn_type05_v3 location_btn">SOS 상담접수</a>
+                    </div>
 				    <!-- 내역 없음 -->
 				    <table class="bbs_list_v2">
 				        <caption>SOS상담 <span>접수일, 상담구분, 제목, 답변여부, 삭제</span></caption>
@@ -352,7 +355,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				            <col style="width:110px" />
 				            <col style="width:*" />
 				            <col style="width:90px" />
-				            <col style="width:80px" />
+				            <col style="width:120px" />
 				        </colgroup>
 				        <thead>
 				            <tr>
