--- a/PC/html/new/questionList.html
+++ b/PC/html/new/questionList.html
@@ -281,7 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">상품 Q&amp;A 내역</h3>
+                    <h3 class="page_title mgt0 border">상품 Q&amp;A 내역</h3>
 				   	<ul class="list_type02_v2 mgt20 mgb60">
 				        <li>상품페이지에서 문의하신 질문에 대한 답변을 편리하게 보실 수 있습니다.</li>
 				        <li>상품 이미지를 클릭하시면 상품 상세페이지로 이동하실 수 있습니다.</li>
@@ -298,10 +298,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <a href="javascript:;" class="link">접수 (999)</a>
                         </li>
                     </ul>
-				    <table class="bbs_list_v2 space_pad border mgt20">
+				    <table class="bbs_list_v2  border mgt20">
 				        <caption>상품 Q&amp;A 내역 <span>작성일자, 상품, 제목, 답변여부</span></caption>
 				        <colgroup>
-				            <col style="width:90px" />
+				            <col style="width:120px" />
 				            <col style="width:120px" />
 				            <col style="width:*" />
 				            <col style="width:80px" />
@@ -317,7 +317,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				        </thead>
 				        <tbody id="qnaTbody">
 			                <tr>
-			                    <td>2019/09/03</td>
+			                    <td class="only_english">2019/09/03</td>
 			                    <td>
 			                        
 			                        <a href="#n"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/50/1540/hot1561081114019.jpg" alt="[2+1] [카멜] 전자노트 카멜보드 10인치 CB1010" width="50" height="50" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';"/></a>
