--- a/PC/html/new/questionList_blank.html
+++ b/PC/html/new/questionList_blank.html
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">상품 Q&amp;A 내역</h3>
+                    <h3 class="page_title border mgt0">상품 Q&amp;A 내역</h3>
 				   	<ul class="list_type02_v2 mgt20 mgb60">
 				        <li>상품페이지에서 문의하신 질문에 대한 답변을 편리하게 보실 수 있습니다.</li>
 				        <li>상품 이미지를 클릭하시면 상품 상세페이지로 이동하실 수 있습니다.</li>
