--- a/PC/html/new/totsaved.html
+++ b/PC/html/new/totsaved.html
@@ -335,7 +335,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">통합포인트</h3>
+                    <h3 class="page_title border mgt0">통합포인트</h3>
                     <ul class="list_type02_v2 mgt20 mgb0">
                         <li>통합포인트는 상품 구매, 상품평 등록 등을 통해 적립됩니다.</li>
                     </ul>
